--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
+    "@angular/animations": "^7.0.4",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
@@ -23,6 +23,7 @@
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
     "ngx-take-until-destroy": "^5.4.0",
+    "ngx-toastr": "^10.0.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
